--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "telegram-upload",
+  "name": "telegram-photo-upload",
   "version": "1.0.0",
   "type": "commonjs",
   "dependencies": {
-    "form-data": "^4.0.0",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7",
+    "form-data": "^4.0.0"
   }
 }
